--- a/views/layouts/dashboard.ejs
+++ b/views/layouts/dashboard.ejs
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sarokaar | Dashboard</title>
-    <link rel="stylesheet" href="fonts/css/all.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/fonts/css/all.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="shortcut icon" href="/images/slogo-2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/dashboard.css">
     <%# <link rel="stylesheet" href="css/index.css" /> %>
 </head>
 <body>
