--- a/views/partials/user-sidebar.ejs
+++ b/views/partials/user-sidebar.ejs
@@ -3,6 +3,11 @@
   <li><a href="#" class="text-dark btn btn-block">profile</a></li>
   <li><a href="#" class="text-dark btn btn-block">settings</a></li>
   <li>
+    <form action="/user/upload" method="GET">
+      <input type="submit" class="text-dark btn btn-block" value="complain">
+    </form>
+  </li>
+  <li>
     <form action="/user/logout" method="GET">
       <input type="submit" value="logout" class="text-dark btn btn-block">
     </form>
