--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,16 +1,20 @@
 <div class="wrapper">
-    <% if(typeof msg !== 'undefined') { %>
-    <div class="alert alert-danger"><%= msg %></div>
-    <% } %>
+    <%- include('../partials/messages.ejs') %>
+    
     <h1>Sar<span class="text-success">ok</span>aar</h1>
     <form action="/admin" method="POST">
         <div class="form-group">
             <i class="fas fa-user-tie"></i>
-            <input type="text" name='email' class="" placeholder="email" autocomplete="off">
+            <input type="text" 
+            name='email'
+            placeholder="email"
+            value="<%= typeof email != 'undefined' ? email : '' %>">
         </div>
         <div class="form-group">
             <i class="fas fa-lock"></i>
-            <input type="password" name='password' class="" placeholder="password">
+            <input type="password" 
+            name='password'
+            placeholder="password">
             <i class="fas fa-eye eyes"></i>
         </div>
         <input type="submit" value="login" class="btn btn-success btn-block">
