--- a/views/partials/user-header.ejs
+++ b/views/partials/user-header.ejs
@@ -4,10 +4,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#"><h1>Sar<span class="text-success">ok</span>aar</h1></a>
+      <a class="navbar-brand" href="/"><h1>Sar<span class="text-success">ok</span>aar</h1></a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="/user/home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
