--- a/views/partials/user-sidebar.ejs
+++ b/views/partials/user-sidebar.ejs
@@ -1,9 +1,21 @@
 <ul class="list-group">
-  <li><a href="#" class="text-dark btn btn-block">complain</a></li>
-  <li><a href="#" class="text-dark btn btn-block">profile</a></li>
-  <li><a href="#" class="text-dark btn btn-block">settings</a></li>
   <li>
-    <form action="/user/upload" method="GET">
+    <form action="/user/profile" method="GET">
+      <input type="submit" class="text-dark btn btn-block" value="profile">
+    </form>
+  </li>
+  <li>
+    <form action="/user/settings" method="GET">
+      <input type="submit" class="text-dark btn btn-block" value="settings">
+    </form>
+  </li>
+  <li>
+    <form action="/user/history" method="GET">
+      <input type="submit" class="text-dark btn btn-block" value="history">
+    </form>
+  </li>
+  <li>
+    <form action="/user/complain-form" method="GET">
       <input type="submit" class="text-dark btn btn-block" value="complain">
     </form>
   </li>
