--- a/views/users/forgot-password.ejs
+++ b/views/users/forgot-password.ejs
@@ -22,6 +22,7 @@
                 </div>
                 <input type="submit" value="reset password" class="btn btn-primary">
             </form>
+            <a href="/user/login" class="text-left text-info">Go back</a>
         </div>
     </div>
 </div>
