--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -31,3 +31,11 @@
     </div>
   </div>
 <% } %>
+
+<% if(link != '') { %>
+  <div class="row">
+    <div class="col-md-8 m-auto text-center">
+      <div class="alert alert-success">We've send a link to<span class="font-weight-bolder"> <%= link %></span>, click <a class="text-info font-italic" target="_blank" href="https://<%= link %>">here</a> to verify</div>
+    </div>
+  </div>
+<% } %>
