--- a/views/users/create-new-password.ejs
+++ b/views/users/create-new-password.ejs
@@ -11,26 +11,25 @@
 <div class="row mb-5">
     <div class="col-md-8 m-auto text-center">
         <div class="card card-body">
-            <form action="/user/home" method="POST">
+            <form action="/user/password-verify" method="POST">
                 <div class="form-group bx">
                     <i class="fas fa-user-circle"></i>
-                    <input type="text" 
-                    name="email" 
-                    placeholder="email" 
-                    value="<%= typeof email != 'undefined' ? email : '' %>"
+                    <input type="password" 
+                    name="password" 
+                    placeholder="enter new password" 
                     class="transparent"> 
                 </div>
                 <div class="form-group bx">
-                    <i class="fas fa-key"></i>
+                    <i class="fas fa-user-circle"></i>
                     <input type="password" 
-                    name="password" 
-                    placeholder="password" 
-                    value="<%= typeof password != 'undefined' ? password : '' %>"
-                    class="transparent">
+                    name="cpassword" 
+                    placeholder="confirm password" 
+                    class="transparent"> 
                 </div>
-                <input type="submit" value="login" class="btn btn-primary">
+                <input type="submit" value="change password" class="btn btn-primary">
+                <input type="hidden" name="token" value="<%= token %>">
+                <input type="hidden" name="userId" value="<%= userId %>">
             </form>
-            <a href="/user/forgot-password" class="text-dark text-left">Forgot Password?</a>
         </div>
     </div>
 </div>
