--- a/views/partials/getAllUsers.ejs
+++ b/views/partials/getAllUsers.ejs
@@ -1,14 +1,16 @@
 <table class="table table-striped">
   <tr>
-    <th>uid</th>
     <th>username</th>
     <th>email</th>
+    <th>created at</th>
+    <th>updated at</th>
   </tr>
   <% users.forEach(user=> { %>
     <tr>
-      <td><%= user.uid %></td>
       <td><%= user.uname %></td>
       <td><%= user.email %></td>
+      <td><%= user.createdAt %></td>
+      <td><%= user.updatedAt %></td>
     </tr>
   <% }) %>
 <table>
