--- a/views/partials/getAllUsers.ejs
+++ b/views/partials/getAllUsers.ejs
@@ -3,12 +3,16 @@
     <th>uid</th>
     <th>username</th>
     <th>email</th>
+    <th>joined</th>
+    <th>last updated</th>
   </tr>
   <% users.forEach(user=> { %>
     <tr>
       <td><%= user.uid %></td>
       <td><%= user.uname %></td>
       <td><%= user.email %></td>
+      <td><%= user.createdAt %></td>
+      <td><%= user.updatedAt %></td>
     </tr>
   <% }) %>
 <table>
