about-me section added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
 
     <div class="flex">
 
-      <h1 class="lead display-1">
-        Sar<span class="text-success">ok</span>aar
+      <h1 class="lead display-1" id="animate">
+        Sarokaar
       </h1>
       <p>
         We do listen to your concerns.
