--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,17 +4,17 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg nav-light bg-success">
 
-            <a class="navbar-brand" href="/">Sarokaar</a>
+            <a class="navbar-brand" href="/" style="float:left;">Sarokaar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" style="display:inline-block !important;" >
 
-                <ul class="navbar-nav mr-auto navbar-right">
-
+                <ul class="navbar-nav mr-auto navbar-right" style= "float:right;" >
+ 
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About us</a>
                     </li>
