--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -254,3 +254,14 @@ nav {
     width: 90%;
   }
 }
+
+#animate {
+	animation:  animatesiddu 1s infinite;
+}
+
+@keyframes animatesiddu{
+	0%{color: #bf55ec;}
+	25%{color:#bf55ec; ;}
+	50%{ color: white; }
+	100%{ color: green;  }
+}
