--- a/views/partials/aboutus.ejs
+++ b/views/partials/aboutus.ejs
@@ -2,8 +2,8 @@
         <div class="container">
   
           <header class="section-header" style="background-color: #3e7d3f">
-            <h3 >How does this work</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h3 style="text-align: center;">Our objectives</h3>
+            
           </header>
   
           <div class="row about-cols">
