--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -11,12 +11,15 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/aboutus.css">
+    <link rel="stylesheet" href="/css/work.css">
 
 </head>
 <body>
     <%- include('../partials/header.ejs')%>
     <%- body %>
     <%- include('../partials/aboutus.ejs')%>
+    <%- include('../partials/work.ejs')%>
+
     <%- include('../partials/footer.ejs')%>
 </body>
 </html>
