--- a/views/partials/getAllComplains.ejs
+++ b/views/partials/getAllComplains.ejs
@@ -6,13 +6,14 @@
     <th>location</th>
     <th>user email</th>
   </tr>
-  <% complains.forEach(complain=> { %>
+  <% complains.forEach(complain => { %>
     <tr>
       <td><%= complain.id %></td>
       <td><%= complain.title %></td>
       <td><%= complain.createdBy %></td>
       <td><%= complain.location %></td>
       <td><%= complain.email %></td>
+      <td><%= complain.uname %></td>
     </tr>
   <% }) %>
 <table>
