--- a/resources/css/userLayout.css
+++ b/resources/css/userLayout.css
@@ -1,3 +1,77 @@
+body,
+html {
+  max-width: 100%;
+  background: #f8f9fa;
+}
+
 .grid {
   display: grid;
+}
+
+.history-modal {
+  cursor: pointer;
+  position:fixed;
+  z-index:9999;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  background: rgba(0,0,0,0.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.history-modal-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row !important;
+}
+
+@media only screen and (max-width: 770px) {
+  .d-770 {
+    width: 0% !important;
+    padding: 0 !important;
+  }
+  .flex ul {
+    list-style: none;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row !important;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  h1 {
+    font-size: 1rem !important;
+  }
+  .flex {
+    padding: 10px 0;
+  }
+  .card {
+    margin-top: 10px;
+  }
+  .nav {
+    width: 100% !important;
+  }
+  .hide {
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  h1 {
+    font-size: 0.7rem !important;
+  }
+  .flex {
+    padding: 10px 0;
+  }
+  .card {
+    margin-top: 10px;
+  }
+  .nav {
+    width: 100% !important;
+  }
 }
