--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
     <div class="flex">
 
-      <h1 class="lead display-1" id="animate">
+      <h1 class="lead display-1" id="animate1">
         Sarokaar
       </h1>
       <p>
@@ -16,8 +16,10 @@
     </div>
   </div>
 
-  <button style="position: fixed; bottom:10px; right: 15px ; z-index: 9990; border-radius: 40%; background-color: #4CAF50;"
-   onclick="openform()">Chat</button>
+
+  <input type="image" name="submit" src="/images/chaticon.png" style=" height:10%; width:auto; position: fixed; bottom:2px; right: 20px ; z-index: 9990; border-radius: 40%;"
+   alt="Submit"  onclick="openform() " />
+
 
    <div id="myform" style="position: fixed; bottom:0; right: 0; z-index: 999; display: none;"> 
    
@@ -72,12 +74,16 @@
 
 <script>
   function openform() {
-  console.log("Clikeed");
-  window.onload= document.getElementById("myform").style.display = "block";
-}
+  var x = 
+  window.onload= document.getElementById("myform");
+  if(x.style.display === "none") {
+    x.style.display = "block";
+  }
+  else
+  {
+    x.style.display = "none";
 
-function closeform() {
-  document.getElementById("myForm").style.display = "none";
+  }
 }
 
 </script>
