--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -20,7 +20,8 @@
       
             <!-- Grid column -->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h1> Playstore and app store </h1>
+              <div><a href="#"><img src="/images/app-store-badge.png" alt="app-store-badge" style="width:120px"></a></div>
+              <div><a href="#"><img src="/images/google-play-badge.png" alt="play-store-badge" style="width:120px"></a></div>
             </div>
             <!-- Grid column -->
       
@@ -50,13 +51,13 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
               <p>
-                <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+                <i class="fas fa-home mr-3"></i>Sanepa-112,Kathmandu,Nepal</p>
               <p>
-                <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                <i class="fas fa-envelope mr-3"></i>sarokaar_nepal@gmail.com</p>
               <p>
-                <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                <i class="fas fa-phone mr-3"></i>+ 01 234 567 88</p>
               <p>
-                <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                <i class="fas fa-print mr-3"></i>+ 01 234 567 89</p>
             </div>
             <!-- Grid column -->
       
