--- a/views/partials/aboutus.ejs
+++ b/views/partials/aboutus.ejs
@@ -1,8 +1,9 @@
 <section id="about">
         <div class="container">
   
-          <header class="section-header" style="background-color: #3e7d3f">
-            <h3 style="text-align: center;">Our objectives</h3>
+          <header class="section-header" style="color: rgb(24, 250, 16); text-decoration: aqua;">
+            <h3 style="text-align: center; font-size: 36px;
+            text-shadow: 0 2px white, 0 3px rgb(84, 168, 50, green); margin: 5px;" >Our objectives</h3>
             
           </header>
   
