--- a/views/partials/work.ejs
+++ b/views/partials/work.ejs
@@ -1,30 +1,94 @@
+<style>
+	img {
+		height: 30%;
+		width: auto;
+		clip: rect(0px,60px,200px,0px);
+	}
+</style>
+
+<section id="about">
+	<div class="container">
+
+	  <header class="section-header" style="color: rgb(24, 250, 16)">
+		<h3 style="text-align: center; font-size: 36px;
+		; text-shadow: 0 2px white, 0 3px rgb(84, 168, 50, green)">How does this work?</h3>
+		
+	  </header>
+
+	  <div class="row about-cols">
+
+		<div class="col-md-4 wow fadeInUp">
+		  <div class="about-col">
+			<div class="img">
+			  <img src="/images/workone.png" alt="" >
+			  <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
+			</div>
+			<h2 class="title"><a href="#">Our Mission</a></h2>
+			<p>
+					Users can complain about anything they find it suitable to the concerned municipality.
+			</p>
+		  </div>
+		</div>
+
+		<div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
+		  <div class="about-col">
+			<div class="img">
+			  <img src="/images/worktwo.jpg" alt=""  style="";
+			  ">
+			  <div class="icon"><i class="ion-ios-list-outline"></i></div>
+			</div>
+			<h2 class="title"><a href="#">Our Plan</a></h2>
+			<p>
+					Authorities recieve the complaints and required resouces are allocated accordingly.
+			</p>
+		  </div>
+		</div>
+
+		<div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+		  <div class="about-col">
+			<div class="img">
+			  <img src="/images/workthree.jpg" alt="" >
+			  <div class="icon"><i class="ion-ios-eye-outline"></i></div>
+			</div>
+			<h2 class="title"><a href="#">Our Vision</a></h2>
+			<p>
+					The complaint is resolved and user is notified of that.
+			</p>
+		  </div>
+		</div>
+
+	  </div>
+
+	</div>
+  </section><!-- #about -->
+
+<!-- 
+
 <div class="wrapper">
 
-	<header>
-		<h1>How does this work </h1>
-	</header>
+	
 		
 <section class="row">
 	
 	<div class="col-md-4">
 		<h2>You complain</h2>
 		<img src="/images/workone.png">
-		<p>Users can complain about anything they find it suitable to the concerned municipality. </p>
+		<p> </p>
 	</div>
 	
 	<div class="col-md-4">
 		<h2>We recieve</h2>
 		<img src ="/images/worktwo.jpg">
-		<p>Authorities recieve the complaints and required resouces are allocated accordingly.</p>
+		<p></p>
 	</div>
   
   <div class="col-md-4">
 		<h2>We respond</h2>
 		<img src="/images/workthree.jpg">
-		<p>The complaint is resolved and user is notified of that.</p>
+		<p></p>
 	</div>
 	
 </section>	
 	
 
-</div>
+</div> -->
