--- a/resources/css/aboutus.css
+++ b/resources/css/aboutus.css
@@ -1,23 +1,7 @@
 
 #about {
-    /* background: url("../img/about-bg.jpg") center top no-repeat fixed; */
-    /* background-color:#3e7d3f;   */
-    background-size: cover;
-    padding: 60px 0 40px 0;
-    position: relative;
+    margin-top:-100px;
   }
-  
-  #about::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(255, 255, 255, 0.92);
-    z-index: 9;
-  }
-  
   #about .container {
     position: relative;
     z-index: 10;
@@ -55,17 +39,9 @@
   
   #about .about-col i {
     font-size: 36px;
-    line-height: 1;
+    line-height: 1.3;
     color: #fff;
     transition: 0.3s;
-  }
-  
-  #about .about-col:hover .icon {
-    background-color: #fff;
-  }
-  
-  #about .about-col:hover i {
-    color: #18d26e;
   }
   
   #about .about-col h2 {
