--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,124 +1,120 @@
+<script defer src="/js/jquery.min.js"></script>
+<script defer src="/js/bootstrap.min.js"></script>
+<script defer src="/js/popper.min.js"></script>
+
 <!-- Footer -->
 <footer class="page-footer font-small success-color pt-4" style="background-color: rgb(50, 168, 82)">
+  <div class="container text-center text-md-left">
+    <!-- Footer links -->
+    <div class="row text-center text-md-left mt-3 pb-3">
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Sarokaar</h6>
+        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+          consectetur
+          adipisicing elit.</p>
+      </div>
+      <!-- Grid column -->
+      <hr class="w-100 clearfix d-md-none">
+      <!-- Grid column -->
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <div><a href="#"><img src="/images/app-store-badge.png" alt="app-store-badge" style="width:120px"></a></div>
+        <div><a href="#"><img src="/images/google-play-badge.png" alt="play-store-badge" style="width:120px"></a></div>
+      </div>
+      <!-- Grid column -->
+      <hr class="w-100 clearfix d-md-none">
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+        <p>
+          <a href="#!">Your Account</a>
+        </p>
+        <p>
+          <a href="#!">Become an Affiliate</a>
+        </p>
+        <p>
+          <a href="#!">Shipping Rates</a>
+        </p>
+        <p>
+          <a href="#!">Help</a>
+        </p>
+      </div>
 
-        <!-- Footer Links -->
-        <div class="container text-center text-md-left">
-      
-          <!-- Footer links -->
-          <div class="row text-center text-md-left mt-3 pb-3">
-      
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Sarokaar</h6>
-              <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-                consectetur
-                adipisicing elit.</p>
-            </div>
-            <!-- Grid column -->
-      
-            <hr class="w-100 clearfix d-md-none">
-      
-            <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <div><a href="#"><img src="/images/app-store-badge.png" alt="app-store-badge" style="width:120px"></a></div>
-              <div><a href="#"><img src="/images/google-play-badge.png" alt="play-store-badge" style="width:120px"></a></div>
-            </div>
-            <!-- Grid column -->
-      
-            <hr class="w-100 clearfix d-md-none">
-      
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
-              <p>
-                <a href="#!">Your Account</a>
-              </p>
-              <p>
-                <a href="#!">Become an Affiliate</a>
-              </p>
-              <p>
-                <a href="#!">Shipping Rates</a>
-              </p>
-              <p>
-                <a href="#!">Help</a>
-              </p>
-            </div>
-      
-            <!-- Grid column -->
-            <hr class="w-100 clearfix d-md-none">
-      
-            <!-- Grid column -->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-              <p>
-                <i class="fas fa-home mr-3"></i>Sanepa-112,Kathmandu,Nepal</p>
-              <p>
-                <i class="fas fa-envelope mr-3"></i>sarokaar_nepal@gmail.com</p>
-              <p>
-                <i class="fas fa-phone mr-3"></i>+ 01 234 567 88</p>
-              <p>
-                <i class="fas fa-print mr-3"></i>+ 01 234 567 89</p>
-            </div>
-            <!-- Grid column -->
-      
-          </div>
-          <!-- Footer links -->
-      
-          <hr>
-      
-          <!-- Grid row -->
-          <div class="row d-flex align-items-center">
-      
-            <!-- Grid column -->
-            <div class="col-md-7 col-lg-8">
-      
-              <!--Copyright-->
-              <p class="text-center text-md-left">© 2018 Copyright:
-                <a href="www.sarokaar.com.np">
-                  <strong> Sarokaar </strong>
-                </a>
-              </p>
-      
-            </div>
-            <!-- Grid column -->
-      
-            <!-- Grid column -->
-            <div class="col-md-5 col-lg-4 ml-lg-0">
-      
-              <!-- Social buttons -->
-              <div class="text-center text-md-right">
-                <ul class="list-unstyled list-inline">
-                  <li class="list-inline-item">
-                    <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                      <i class="fab fa-google-plus-g"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a class="btn-floating btn-sm rgba-white-slight mx-1">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-      
-            </div>
-            <!-- Grid column -->
-      
-          </div>
-          <!-- Grid row -->
-      
+      <!-- Grid column -->
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+        <p>
+          <i class="fas fa-home mr-3"></i>Sanepa-112,Kathmandu,Nepal</p>
+        <p>
+          <i class="fas fa-envelope mr-3"></i>sarokaar_nepal@gmail.com</p>
+        <p>
+          <i class="fas fa-phone mr-3"></i>+ 01 234 567 88</p>
+        <p>
+          <i class="fas fa-print mr-3"></i>+ 01 234 567 89</p>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Footer links -->
+
+    <hr>
+
+    <!-- Grid row -->
+    <div class="row d-flex align-items-center">
+
+      <!-- Grid column -->
+      <div class="col-md-7 col-lg-8">
+
+        <!--Copyright-->
+        <p class="text-center text-md-left">© 2018 Copyright:
+          <a href="www.sarokaar.com.np">
+            <strong> Sarokaar </strong>
+          </a>
+        </p>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-5 col-lg-4 ml-lg-0">
+
+        <!-- Social buttons -->
+        <div class="text-center text-md-right">
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-google-plus-g"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+          </ul>
         </div>
-        <!-- Footer Links -->
-      
-      </footer>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+</footer>
       <!-- Footer -->
