--- a/views/partials/work.ejs
+++ b/views/partials/work.ejs
@@ -1,4 +1,56 @@
-<div class="wrapper">
+<%# <section id="about">
+  <div class="container">
+
+    <header class="section-header" style="">
+      <h3 style="text-align: center; ">Our objectives</h3>
+      
+    </header>
+
+    <div class="row about-cols">
+
+      <div class="col-md-4 wow fadeInUp">
+        <div class="about-col">
+          <div class="img">
+            <img src="/images/workone.png" alt="" >
+          </div>
+          <h2 class="title"><a href="#">You complain</a></h2>
+          <p>
+            Users can complain about anything they find it suitable to the concerned municipality. 
+          </p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="about-col">
+          <div class="img">
+            <img src="/images/worktwo.jpg" alt="" height=3200px >
+          </div>
+          <h2 class="title"><a href="#">We Recieve</a></h2>
+          <p>
+            Authorities recieve the complaints and required resouces are allocated accordingly.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-md-4 ">
+        <div class="about-col">
+          <div class="img">
+            <img src="/images/workthree.jpg" alt="" class="img-fluid">
+            
+          </div>
+          <h2 class="title"><a href="#">We Respond</a></h2>
+          <p>
+            The complaint is resolved and user is notified of that.
+          </p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section> %>
+  
+<%# <div class="wrapper">
 
 	<header>
 		<h1>How does this work </h1>
@@ -9,22 +61,90 @@
 	<div class="col-md-4">
 		<h2>You complain</h2>
 		<img src="/images/workone.png">
-		<p>Users can complain about anything they find it suitable to the concerned municipality. </p>
+		<p></p>
 	</div>
 	
 	<div class="col-md-4">
 		<h2>We recieve</h2>
 		<img src ="/images/worktwo.jpg">
-		<p>Authorities recieve the complaints and required resouces are allocated accordingly.</p>
+		<p></p>
 	</div>
   
   <div class="col-md-4">
 		<h2>We respond</h2>
 		<img src="/images/workthree.jpg">
-		<p>The complaint is resolved and user is notified of that.</p>
+		<p></p>
 	</div>
 	
 </section>	
 	
 
-</div>
+</div> %>
+
+
+<section id="about" style="height:80vh;margin:100px 0">
+  <div class="container bg-light d-flex justify-content-center align-items-center" style="height:100%;">
+
+    <div class="row about-cols">
+
+      <div class="col-md-4 wow fadeInUp">
+        <div class="about-col">
+          <div class="img">
+            <img alt="" class="img-fluid">
+            <div class="icon"><i class="fas fa-rocket"></i></div>
+          </div>
+
+
+          <h2 class="title">You Complain</h2>
+          <img src="/images/workone.png" style="height=50px;width=50px;"> 
+          <p></p>
+
+          <%# <h2 class="title"><a href="#">Our Mission</a></h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p> %>
+        </div>
+      </div>
+
+      <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="about-col">
+          <div class="img">
+            <img alt="" class="img-fluid">
+            <div class="icon"><i class="fas fa-seedling"></i></div>
+          </div>
+
+
+          <h2 class="title">We recieve</h2>
+          <img src="/images/worktwo.jpg" style="height=50px;width=50px;"> 
+          <p></p>
+
+          <%# <h2 class="title"><a href="#">Our Plan</a></h2>
+          <p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem  doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+          </p> %>
+        </div>
+      </div>
+
+      <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+        <div class="about-col">
+          <div class="img">
+            <img alt="" class="img-fluid">
+            <div class="icon"><i class="fas fa-gem"></i></div>
+          </div>
+
+
+          <h2 class="title">We respond</h2>
+          <img src="/images/workthree.jpg" style="height=50px;width=50px;"> 
+          <p></p>
+
+          <%# <h2 class="title"><a href="#">Our Vision</a></h2>
+          <p>
+            Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
+          </p> %>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
