--- a/views/partials/work.ejs
+++ b/views/partials/work.ejs
@@ -12,7 +12,7 @@
     <h2 class="title">We recieve</h2>
     <div><img src="/images/worktwo.jpg" style="height:250px;width:250px;"></div> 
     <p>
-      orem ipsum dolor sit amet, ei facilis electram consulatu eam, mel ad postea docendi denique, et veri nihil pro. Per an putant conceptam, quod assum latine cum ut. Pri falli sonet ne. Ea vim vide repudiare, vel ei alienum deterruisset interpretaris.
+      lorem ipsum dolor sit amet, ei facilis electram consulatu eam, mel ad postea docendi denique, et veri nihil pro. Per an putant conceptam, quod assum latine cum ut. Pri falli sonet ne. Ea vim vide repudiare, vel ei alienum deterruisset interpretaris.
     </p>
   </div>
 
